more songs and fixed a overlapping issue

--- a/musicTierList/style.css
+++ b/musicTierList/style.css
@@ -10,7 +10,7 @@
 .tierLabel{
     background-color: orange;
     color: black;
-    width: 100px;
+    min-width: 100px;
     top: 50%;
     left: 50%;
     display: flex;
